refactor : test 코드 given, when, then 패턴 적용 및 리팩터링